--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 ---
 
-<Layout title="About">
+<BaseLayout title="About">
   <h1>About</h1>
-</Layout>
+</BaseLayout>
