--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import BaseLayout from '../layouts/BaseLayout.astro';
 
 const why = [
 	{
@@ -82,7 +82,7 @@ const FAQs =[
 ]
 ---
 
-<Layout title="Lonnies Mobile Mechanic">
+<BaseLayout title="Lonnies Mobile Mechanic" description="Lonnies Mobile Mechanic is a mobile auto repair shop in Tampa, Florida. We offer affordable repairs for your car, truck, or commercial vehicle. Our team of experts is here to help you save money and get your vehicle fixed in no time.">
 	<main class="content-grid">
 	<section>
 		<h1>Lonnies Mobile Mechanic</h1>
@@ -167,4 +167,4 @@ const FAQs =[
 		</div>
 	</section>
 	</main>
-</Layout>
+</BaseLayout>
