--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,17 +1,10 @@
 ---
-const {title}	= Astro.props
+import BaseHead from './BaseHead.astro';
 ---
 
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="robots" content="index, follow" />
-		<title>{title}</title>
-	</head>
+<BaseHead {...Astro.props}/>
 	<body>
 	    <slot />
 	</body>
