added nav and logo. updated favicon

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,10 +1,12 @@
 ---
 import BaseHead from './BaseHead.astro';
+import Nav from '@/components/Nav.astro';
 ---
 
 <!doctype html>
 <html lang="en">
 <BaseHead {...Astro.props}/>
+  <Nav/>
 	<body>
 	    <slot />
 	</body>
