--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,7 +94,7 @@ const FAQs =[
 	
 	<section>
 		<h2>Why Choose Lonnie's Mobile Mechanic?</h2>
-		<a href="#">Schedule an Appointment t</a>
+		<a href="#">Schedule an Appointment</a>
 		<a href="#">Browse Services</a>
 		<ul>
 			{why.map((item) => (
