--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -1,22 +1,21 @@
 ---
-import { baseData } from '@/data/siteData.ts';
+import { baseData } from "@/data/siteData.ts";
 
 type Props = {
-  title?: string
-  description?: string
-}
+  title?: string;
+  description?: string;
+};
 
-const {title = baseData.title ,description = baseData.description} = Astro.props
+const { title = baseData.title, description = baseData.description } =
+  Astro.props;
 ---
 
-
-
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<meta name="robots" content="index, follow" />
-    <meta name="description" content={description} />
-		<title>{title}</title>
-	</head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <meta name="generator" content={Astro.generator} />
+  <meta name="robots" content="index, follow" />
+  <meta name="description" content={description} />
+  <title>{title}</title>
+</head>
