Squash merge Header into main

--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,75 +1,76 @@
 ---
-import Footer from "@/components/Footer.astro";
-import BaseHead from "./BaseHead.astro";
-import Nav from "@/components/Nav.astro";
+import Footer from '@/components/Footer.astro'
+import BaseHead from './BaseHead.astro'
+import Nav from '@/components/Nav.astro'
 ---
 
 <!doctype html>
-<html lang="en">
-  <BaseHead {...Astro.props} />
-  <body>
-    <Nav />
-    <main class="content-grid">
-      <slot />
-    </main>
-    <Footer />
-  </body>
-</html>
+<html lang='en'>
+	<BaseHead {...Astro.props} />
+	<body>
+		<Nav />
+		<main class='content-grid'>
+			<slot />
+		</main>
+		<Footer />
+	</body></html
+>
 
 <style is:global>
-  /* the props */
-  @import "open-props/style";
-  @import "open-props/normalize/light";
+	/* the props */
+	@import 'open-props/style';
+	@import 'open-props/normalize/light';
 
-  .content-grid {
-    --padding-inline: 1rem;
-    --content-max-width: 1400px;
-    --breakout-max-width: 1600px;
+	.content-grid {
+		--padding-inline: 1rem;
+		--content-max-width: 1400px;
+		--breakout-max-width: 1600px;
 
-    --breakout-size: calc(
-      (var(--breakout-max-width) - var(--content-max-width)) / 2
-    );
+		--breakout-size: calc(
+			(var(--breakout-max-width) - var(--content-max-width)) / 2
+		);
 
-    display: grid;
-    grid-template-columns:
-      [full-width-start] minmax(var(--padding-inline), 1fr)
-      [breakout-start] minmax(0, var(--breakout-size))
-      [content-start] min(
-        100% - (var(--padding-inline) * 2),
-        var(--content-max-width)
-      )
-      [content-end]
-      minmax(0, var(--breakout-size)) [breakout-end]
-      minmax(var(--padding-inline), 1fr) [full-width-end];
-  }
+		display: grid;
+		grid-template-columns:
+			[full-width-start] minmax(var(--padding-inline), 1fr)
+			[breakout-start] minmax(0, var(--breakout-size))
+			[content-start] min(
+				100% - (var(--padding-inline) * 2),
+				var(--content-max-width)
+			)
+			[content-end]
+			minmax(0, var(--breakout-size)) [breakout-end]
+			minmax(var(--padding-inline), 1fr) [full-width-end];
+	}
 
-  .content-grid > :not(.breakout, .full-width),
-  .full-width > :not(.breakout, .full-width) {
-    grid-column: content;
-  }
+	.content-grid > :not(.breakout, .full-width),
+	.full-width > :not(.breakout, .full-width) {
+		grid-column: content;
+	}
 
-  .content-grid > .breakout {
-    grid-column: breakout;
-  }
+	.content-grid > .breakout {
+		grid-column: breakout;
+	}
 
-  .content-grid > .full-width {
-    grid-column: full-width;
+	.content-grid > .full-width {
+		grid-column: full-width;
 
-    display: grid;
-    grid-template-columns: inherit;
-  }
+		display: grid;
+		grid-template-columns: inherit;
+	}
 
-  body {
-    display: grid;
-    min-height: 100mvh;
-    margin-left: auto;
-    margin-right: auto;
-  }
+	body {
+		display: grid;
+		min-height: 100vh;
+		margin-left: auto;
+		margin-right: auto;
+		grid-template-rows: auto 1fr auto;
+	}
 
-  section {
-    margin-block: var(--size-8);
-  }
+	section {
+		margin-block: var(--size-8);
+	}
 
-  main {
-  }
+	main {
+	}
 </style>
