--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,7 +1,8 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro";
+import Heading from '@/components/ui/Heading.astro'
+import BaseLayout from '../layouts/BaseLayout.astro'
 ---
 
-<BaseLayout title="About">
-  <h1>About</h1>
+<BaseLayout title='About'>
+	<Heading tag='h1' size='h1'>About</Heading>
 </BaseLayout>
