--- a/src/components/home/Hero.astro
+++ b/src/components/home/Hero.astro
@@ -1,3 +1,17 @@
 ---
-
+import Heading from '../ui/Heading.astro'
+import Link from '../ui/Link.astro'
 ---
+
+<section>
+	<Heading tag='h1' size='h6'>Lonnies Mobile Mechanic</Heading>
+	<Heading tag='h2' size='h1'
+		>Mobile Auto Repair in Tampa – We Fix It Where It Sits!</Heading
+	>
+	<p>
+		At Lonnies Mobile Mechanic, we bring affordable mobile auto repair in Tampa
+		right to your doorstep. SAVE YOUR MONEY and SAY NO TO THE TOW
+	</p>
+	<Link href='#'>Schedule an Appointment</Link>
+	<Link href='tel:813-770-0044'>Call 813-770-0044</Link>
+</section>
