--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -2,6 +2,10 @@
 import Footer from '@/components/Footer.astro'
 import BaseHead from './BaseHead.astro'
 import Nav from '@/components/Nav.astro'
+
+import 'open-props/style'
+import 'open-props/normalize'
+import '@/styles/global.css'
 ---
 
 <!doctype html>
@@ -16,61 +20,4 @@ import Nav from '@/components/Nav.astro'
 	</body></html
 >
 
-<style is:global>
-	/* the props */
-	@import 'open-props/style';
-	@import 'open-props/normalize/light';
-
-	.content-grid {
-		--padding-inline: 1rem;
-		--content-max-width: 1400px;
-		--breakout-max-width: 1600px;
-
-		--breakout-size: calc(
-			(var(--breakout-max-width) - var(--content-max-width)) / 2
-		);
-
-		display: grid;
-		grid-template-columns:
-			[full-width-start] minmax(var(--padding-inline), 1fr)
-			[breakout-start] minmax(0, var(--breakout-size))
-			[content-start] min(
-				100% - (var(--padding-inline) * 2),
-				var(--content-max-width)
-			)
-			[content-end]
-			minmax(0, var(--breakout-size)) [breakout-end]
-			minmax(var(--padding-inline), 1fr) [full-width-end];
-	}
-
-	.content-grid > :not(.breakout, .full-width),
-	.full-width > :not(.breakout, .full-width) {
-		grid-column: content;
-	}
-
-	.content-grid > .breakout {
-		grid-column: breakout;
-	}
-
-	.content-grid > .full-width {
-		grid-column: full-width;
-
-		display: grid;
-		grid-template-columns: inherit;
-	}
-
-	body {
-		display: grid;
-		min-height: 100vh;
-		margin-left: auto;
-		margin-right: auto;
-		grid-template-rows: auto 1fr auto;
-	}
-
-	section {
-		margin-block: var(--size-8);
-	}
-
-	main {
-	}
-</style>
+<style is:global></style>
