--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -4,7 +4,7 @@ import BaseHead from './BaseHead.astro'
 import Nav from '@/components/Nav.astro'
 
 import 'open-props/style'
-import 'open-props/normalize'
+import 'open-props/normalize/light'
 import '@/styles/global.css'
 ---
 
