--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,30 @@
+*,
+:after,
+:before {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  box-sizing: border-box;
+  -ms-box-sizing: border-box;
+  -o-box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+ul[role="list"],
+ol[role="list"] {
+  list-style: none;
+}
+button {
+  cursor: pointer;
+}
+
 .content-grid {
   --padding-inline: 1rem;
   --content-max-width: 1400px;
