--- a/src/layouts/BaseHead.astro
+++ b/src/layouts/BaseHead.astro
@@ -1,21 +1,33 @@
 ---
-import { baseData } from "@/data/siteData.ts";
+import { baseData } from '@/data/siteData.ts'
 
 type Props = {
-  title?: string;
-  description?: string;
-};
+	title?: string
+	description?: string
+}
 
 const { title = baseData.title, description = baseData.description } =
-  Astro.props;
+	Astro.props
 ---
 
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-  <meta name="generator" content={Astro.generator} />
-  <meta name="robots" content="index, follow" />
-  <meta name="description" content={description} />
-  <title>{title}</title>
+	<meta charset='UTF-8' />
+	<meta name='viewport' content='width=device-width' />
+	<link rel='icon' type='image/svg+xml' href='/favicon.svg' />
+	<link
+		rel='stylesheet'
+		href='https://unpkg.com/leaflet@1.9.4/dist/leaflet.css'
+		integrity='sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY='
+		crossorigin=''
+	/>
+	<script
+		src='https://unpkg.com/leaflet@1.9.4/dist/leaflet.js'
+		integrity='sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo='
+		crossorigin=''></script>
+	<script src='https://unpkg.com/leaflet-providers@latest/leaflet-providers.js'
+	></script>
+	<meta name='generator' content={Astro.generator} />
+	<meta name='robots' content='index, follow' />
+	<meta name='description' content={description} />
+	<title>{title}</title>
 </head>
