--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,23 +1,28 @@
 ---
-import Footer from '@/components/Footer.astro'
-import BaseHead from './BaseHead.astro'
-import Nav from '@/components/Nav.astro'
+import Footer from "@/components/Footer.astro";
+import BaseHead from "./BaseHead.astro";
+import Nav from "@/components/Nav.astro";
 
-import 'open-props/style'
-import 'open-props/normalize/light'
-import '@/styles/global.css'
+import "open-props/style";
+import "open-props/normalize/light";
+import "@/styles/global.css";
 ---
 
 <!doctype html>
-<html lang='en'>
+<html lang="en">
 	<BaseHead {...Astro.props} />
 	<body>
 		<Nav />
-		<main class='content-grid'>
+		<main class="content-grid">
 			<slot />
 		</main>
 		<Footer />
-	</body></html
->
+	</body>
+</html>
 
-<style is:global></style>
+<style is:global>
+	:where(details) {
+		background: none;
+		border-radius: 0;
+	}
+</style>
