--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,11 @@
 ---
-import BaseLayout from '@/layouts/BaseLayout.astro'
-import Heading from '@/components/ui/Heading.astro'
-import Hero from '@/components/home/Hero.astro'
-import FeaturesBanner from '@/components/home/FeaturesBanner.astro'
-import ServicesBanner from '@/components/home/ServicesBanner.astro'
-import TestimonialBanner from '@/components/home/TestimonialBanner.astro'
-import FAQ from '@/components/home/FAQ.astro'
+import BaseLayout from "@/layouts/BaseLayout.astro";
+import Heading from "@/components/ui/Heading.astro";
+import Hero from "@/components/home/Hero.astro";
+import FeaturesBanner from "@/components/home/FeaturesBanner.astro";
+import ServicesBanner from "@/components/home/ServicesBanner.astro";
+import TestimonialBanner from "@/components/home/TestimonialBanner.astro";
+import FAQ from "@/components/home/FAQ.astro";
 ---
 
 <BaseLayout>
@@ -16,12 +16,12 @@ import FAQ from '@/components/home/FAQ.astro'
 	<FAQ />
 
 	<section>
-		<Heading tag='h2' size='h2'>Service Area</Heading>
-		<div id='map'></div>
+		<Heading tag="h2" size="h2">Service Area</Heading>
+		<div id="map"></div>
 	</section>
 
 	<section>
-		<Heading tag='h2' size='h2'>Call Us Now</Heading>
+		<Heading tag="h2" size="h2">Call Us Now</Heading>
 		<p>Lonnies Mobile Mechanic</p>
 		<p>We Fix It Where It Sits</p>
 		<p>813-770-0044</p>
@@ -31,21 +31,24 @@ import FAQ from '@/components/home/FAQ.astro'
 </BaseLayout>
 
 <script>
-	var center = { lat: 27.964157, lng: -82.452606 }
-	var map = L.map('map', {
+	var center = { lat: 27.964157, lng: -82.452606 };
+	var map = L.map("map", {
 		zoomControl: false,
 		dragging: false,
-		scrollWheelZoom: false
-	}).setView([27.964157, -82.452606], 10)
-	L.tileLayer('https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png', {
-		maxZoom: 10
-	}).addTo(map)
+		scrollWheelZoom: false,
+	}).setView([27.964157, -82.452606], 10);
+	L.tileLayer(
+		"https://{s}.basemaps.cartocdn.com/dark_all/{z}/{x}/{y}{r}.png",
+		{
+			maxZoom: 10,
+		},
+	).addTo(map);
 	var circle = L.circle([27.964157, -82.452606], {
-		color: 'red',
-		fillColor: '#f03',
+		color: "red",
+		fillColor: "#f03",
 		fillOpacity: 0.3,
-		radius: 30000
-	}).addTo(map)
+		radius: 30000,
+	}).addTo(map);
 </script>
 
 <style>
