--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -11,16 +11,25 @@
   margin: 0;
   padding: 0;
 }
+
+:root {
+  interpolate-size: allow-keywords;
+}
+
+
+
 input,
 button,
 textarea,
 select {
   font: inherit;
 }
+
 ul[role="list"],
 ol[role="list"] {
   list-style: none;
 }
+
 button {
   cursor: pointer;
 }
@@ -30,33 +39,24 @@ button {
   --content-max-width: 1400px;
   --breakout-max-width: 1600px;
 
-  --breakout-size: calc(
-    (var(--breakout-max-width) - var(--content-max-width)) / 2
-  );
+  --breakout-size: calc((var(--breakout-max-width) - var(--content-max-width)) / 2);
 
   display: grid;
   grid-template-columns:
-    [full-width-start] minmax(var(--padding-inline), 1fr)
-    [breakout-start] minmax(0, var(--breakout-size))
-    [content-start] min(
-      100% - (var(--padding-inline) * 2),
-      var(--content-max-width)
-    )
-    [content-end]
-    minmax(0, var(--breakout-size)) [breakout-end]
-    minmax(var(--padding-inline), 1fr) [full-width-end];
+    [full-width-start] minmax(var(--padding-inline), 1fr) [breakout-start] minmax(0, var(--breakout-size)) [content-start] min(100% - (var(--padding-inline) * 2),
+      var(--content-max-width)) [content-end] minmax(0, var(--breakout-size)) [breakout-end] minmax(var(--padding-inline), 1fr) [full-width-end];
 }
 
-.content-grid > :not(.breakout, .full-width),
-.full-width > :not(.breakout, .full-width) {
+.content-grid> :not(.breakout, .full-width),
+.full-width> :not(.breakout, .full-width) {
   grid-column: content;
 }
 
-.content-grid > .breakout {
+.content-grid>.breakout {
   grid-column: breakout;
 }
 
-.content-grid > .full-width {
+.content-grid>.full-width {
   grid-column: full-width;
 
   display: grid;
@@ -75,5 +75,4 @@ section {
   margin-block: var(--size-8);
 }
 
-main {
-}
+main {}
